CSRF protection added Order Now bug fixed

--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -24,7 +24,7 @@
                         <div class="card__actions">
                             <a href="/products/<%= product._id %>" class="btn">Details</a>
                             <% if (isAuthenticated) {%>
-                                <%- include('../includes/add-to-cart', {product: product})%>
+                                <%- include('../includes/add-to-cart', {product: product, csrfToken: csrfToken})%>
                             <% } %>    
                         </div>
                     </article>
