--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -12,7 +12,7 @@
             <h2><%= product.price %></h2>
             <p><%= product.description %></p>
             <% if (isAuthenticated) { %>
-              <%- include('../includes/add-to-cart', {product: product})%>
+              <%- include('../includes/add-to-cart', {product: product, csrfToken: csrfToken})%>
             <% } %>
         </main>
         <%- include('../includes/end.ejs') %>
